<resources>
    <string name="app_name">UserGithub</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="setting">Settings</string>
    <string name="img_avatar">Avatar</string>
    <string name="username">username</string>
    <string name="full_name">Full Name</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="repository">Repository</string>
    <string name="gists">Gists</string>
    <string name="no">0</string>
    <string name="back">back</string>
    <string name="login">Login</string>
    <string name="share">Share</string>
    <string name="reminder_pref">Reminder</string>
    <string name="background">Background</string>
    <string name="line">line</string>
    <string name="language">Language</string>
    <string name="language_pref">language</string>
    <string name="img_splash">imageview Splash</string>
    <string name="search">Enter keyword in here</string>
    <string name="Followers">Followers :</string>
    <string name="Following">Following</string>
    <string name="htmlurl">Html URL</string>
</resources>