<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <ImageView
        android:id="@+id/avatar_detail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@android:color/white"
        android:scaleType="fitXY"
        android:contentDescription="@string/img_avatar"/>
    <ImageView
        android:id="@+id/bgr1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:contentDescription="@string/img_avatar"
        android:src="@android:color/black"
        android:alpha="0.8"/>
    <ImageView
        android:id="@+id/bgr2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/bgr1"
        android:contentDescription="@string/img_avatar"
        android:src="@android:color/black"
        android:alpha="0.6"/>
    <ImageButton
        android:id="@+id/btn_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back"
        android:contentDescription="@string/back" />
    <ImageButton
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/linear1"
        android:src="@drawable/ic_baseline_share"
        android:contentDescription="@string/share"/>
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btn_back_arrow"
        android:textColor="@android:color/white"
        android:text="@string/username"
        android:layout_marginTop="8dp"
        android:textSize="16sp"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar_detail2"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:src="@android:color/white"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/bgr1"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/avatar_detail"
        android:layout_below="@id/bgr1"
        app:srcCompat="@drawable/ic_baseline_favorite"
        android:layout_marginBottom="40dp"/>
    <TextView
        android:id="@+id/tv_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/full_name"
        android:layout_marginTop="110dp"
        android:layout_toEndOf="@id/avatar_detail2"
        android:textColor="@android:color/white"
        android:layout_marginStart="16dp"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_fullname"
        android:layout_toEndOf="@id/avatar_detail2"
        android:orientation="horizontal"
        android:layout_marginStart="16dp">
        <TextView
            android:id="@+id/tv_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="2"
            android:textColor="@android:color/white"
            tools:text="@string/company"/>
        <ImageView
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:src="@android:color/white"
            android:contentDescription="@string/line"/>
        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginStart="4dp"
            android:textColor="@android:color/white"
            tools:text="@string/location"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_below="@id/avatar_detail2"
        android:padding="5dp">
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@color/colorPrimary">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_drop_up_24"
                    android:contentDescription="@string/gists"/>
                <TextView
                    android:id="@+id/label_gists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gists"
                    android:layout_centerInParent="true"
                    android:textSize="14sp"
                    android:includeFontPadding="false"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:id="@+id/total_gists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/no"
                    android:layout_below="@id/label_gists"
                    android:layout_centerInParent="true"
                    android:textSize="14sp"
                    android:includeFontPadding="false"
                    android:textColor="@android:color/white"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@color/colorPrimary">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_storage_24"
                    android:contentDescription="@string/repository"/>
                <TextView
                    android:id="@+id/label_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repository"
                    android:layout_centerInParent="true"
                    android:textSize="14sp"
                    android:includeFontPadding="false"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:id="@+id/total_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/no"
                    android:layout_below="@id/label_repository"
                    android:layout_centerInParent="true"
                    android:textSize="14sp"
                    android:includeFontPadding="false"
                    android:textColor="@android:color/white"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout1"/>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tabslayout"/>
    <ProgressBar
        android:id="@+id/progressbar_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"
        tools:visibility="gone"/>
</RelativeLayout>