<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardMaxElevation="8dp"
    app:cardBackgroundColor="@android:color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar_row"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:src="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tv_login_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/login"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatar_row" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="2dp"
            app:layout_constraintStart_toEndOf="@id/avatar_row"
            app:layout_constraintTop_toBottomOf="@id/tv_login_row"
            android:layout_marginStart="8dp"
            android:src="@color/colorPrimary"
            android:contentDescription="@string/line"/>
        <TextView
            android:id="@+id/tv_htmlurl_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/htmlurl"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@id/avatar_row"
            app:layout_constraintTop_toBottomOf="@id/tv_login_row"
            android:layout_marginStart="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>